--- a/src/sass/_ctasection.scss
+++ b/src/sass/_ctasection.scss
@@ -1,3 +1,6 @@
+@import "../styles\ variables/variables.scss";
+
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
