--- a/src/sass/_description2.scss
+++ b/src/sass/_description2.scss
@@ -4,7 +4,7 @@ article.desc-2 {
   min-height: 60vh;
   display: flex;
   align-items: center;
-  background: #f6f8ff;
+  background: $background;
   justify-content: space-between;
   padding: 5vh 5%;
   .row {
