--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,7 +2,7 @@
 
 
 footer.footer {
-  background-color: #000;
+  background-color: $black;
   padding: 7vh 5%;
   min-height: 10vh;
   .row {
@@ -12,7 +12,15 @@ footer.footer {
       height: 100%;
       align-items: center;
       justify-content: space-evenly;
-      @media screen and (max-width: 800px) {
+      /*@media screen and (max-width: 800px) {
+        flex-flow: column;
+        justify-content: space-between;
+        h3 {
+          margin-top: 5vh;
+          text-align: center;
+        }
+      }*/
+      @include media-down(md) {
         flex-flow: column;
         justify-content: space-between;
         h3 {
@@ -21,7 +29,7 @@ footer.footer {
         }
       }
       h3 {
-        color: #ccc;
+        color: $grey1;
         font-size: 1em;
         font-weight: 200;
       }
