--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -2,8 +2,9 @@
 
 .spacing {
   height: 12vh;
-  background-color: #f6f8ff;
+  background-color: $background;
 }
+
 header.navigation {
   height: 12vh;
   position: fixed;
@@ -11,11 +12,21 @@ header.navigation {
   z-index: 10000;
   transition: background-color 0.3s ease-out;
   &.scrolled {
-    background-color: #fff;
+    background-color: $white;
   }
-  @media screen and (max-width: 1000px) {
+  /*@media screen and (max-width: 1000px) {
     background: #fff;
 
+    svg {
+      width: 100%;
+    }
+    .row {
+      padding: 0 2%;
+    }
+  }*/
+  @include media-down(lg) {
+    background: $white;
+    height: 15vh;
     svg {
       width: 100%;
     }
@@ -41,7 +52,7 @@ header.navigation {
       margin: 0;
       list-style: none;
       transition: height 0.3s ease-out;
-      @media screen and (max-width: 1000px) {
+      /*@media screen and (max-width: 1000px) {
         &.mobile.active {
           position: absolute;
           display: flex !important;
@@ -79,35 +90,74 @@ header.navigation {
           overflow: hidden;
           display: none !important;
         }
+      }*/
+      @include media-down(lg) {
+        &.mobile.active {
+          position: absolute;
+          display: flex !important;
+          left: 0;
+          top: 100%;
+          flex-direction: column;
+          width: 100vw;
+          max-width: 100%;
+          background: $white;
+          min-height: 65vh;
+          transition: height 0.3s ease-out;
+          padding-bottom: 5vh;
+          align-items: center;
+          li {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &:hover {
+              background: $grey1;
+            }
+            &:hover:last-child {
+              background: $white;
+            }
+          }
+          a {
+            &:after {
+              display: none;
+            }
+          }
+        }
+        &.mobile {
+          height: 0;
+          overflow: hidden;
+          display: none !important;
+        }
       }
       .header-link-box {
         &.cta {
           a {
-            background: #1243e3;
-            color: #fff;
+            background: $blue;
+            color: $white;
             padding: 15px 20px;
             transition: background-color 0.3s ease-out;
             border-radius: 8px;
-            border: 2px solid #1243e3;
+            border: 2px solid $blue;
             &:after {
               display: none;
             }
             &:hover {
-              background: darken(#1243e3, 10);
+              background: darken($blue, 10);
             }
           }
         }
         &.cta.personas {
           a {
             border-radius: 8px;
-            border: 2px solid #1243e3;
+            border: 2px solid $blue;
             background: transparent;
-            color: #1243e3;
+            color: $blue;
             padding: 15px 20px;
             transition: background-color 0.3s ease-out, color 0.3s ease-out;
             &:hover {
-              color: #fff;
-              background-color: #1243e3;
+              color: $white;
+              background-color: $blue;
             }
             &:after {
               display: none;
@@ -115,7 +165,7 @@ header.navigation {
           }
         }
         a {
-          color: #091540;
+          color: $darkBlue;
           text-decoration: none;
           position: relative;
           padding: 15px;
@@ -129,7 +179,7 @@ header.navigation {
             width: 0%;
             content: ".";
             color: transparent;
-            background: #091540;
+            background: $darkBlue;
             height: 2px;
             transition: all 0.3s ease-out;
           }
@@ -138,7 +188,7 @@ header.navigation {
           }
           &#blog {
             cursor: not-allowed;
-            color: #ccc;
+            color: $grey1;
           }
           &#blog:hover:after {
             width: 0;
