--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -16,43 +16,17 @@
 }
 
 header.navigation {
-  height: 14vh;
+  height: 12vh;
   position: fixed;
   top: 0;
   z-index: 10000;
-  transition: 0.3s ease-out;
+  transition: background-color 0.3s ease-out;
   &.scrolled {
-    background-color: $white;
+    background-color:  $white;
   }
-  @media screen and (max-width: 1000px) {
-    height: 15vh;
-    background: $white;
-    transition: 0.2s ease-out;
-    
-  /*@media screen and (max-width: 1000px) {
-    background: #fff;
-
-    svg {
-      width: 100%;
-    }
-    .row {
-      padding: 0 2%;
-    }
-
-    .bar-icon{
-
-      height: 30px;
-    }
-    .close-icon{
-
-      height: 35px;
-  }*/
   @include media-down(lg) {
     background: $white;
-    height: 15vh;
-    svg {
-      width: 100%;
-    }
+    height: 10vh;
     .row {
       padding: 0 2%;
     }
@@ -72,45 +46,6 @@ header.navigation {
       margin: 0;
       list-style: none;
       transition: height 0.3s ease-out;
-      /*@media screen and (max-width: 1000px) {
-        &.mobile.active {
-          position: absolute;
-          display: flex !important;
-          left: 0;
-          top: 100%;
-          flex-direction: column;
-          width: 100vw;
-          max-width: 100%;
-          background: $white;
-          min-height: 65vh;
-          transition: 0.2;
-          padding-bottom: 5vh;
-          align-items: center;
-          li {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            &:hover {
-              background: #ccc;
-            }
-            &:hover:last-child {
-              background: #fff;
-            }
-          }
-          a {
-            &:after {
-              display: none;
-            }
-          }
-        }
-        &.mobile {
-          height: 0;
-          overflow: hidden;
-          display: none !important;
-        }
-      }*/
       @include media-down(lg) {
         &.mobile.active {
           position: absolute;
@@ -225,5 +160,4 @@ header.navigation {
       }
     }
   }
-}
 }
