change style format css to scss _maintenance file & modularizacion to Maintenance component

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,7 @@
 @import "_helpers.scss";
 @import "_finalCta.scss";
 @import "_footer.scss";
+@import "_maintenance.scss";
 
 * {
   font-family: "Poppins", sans-serif;
