--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import "_finalCta.scss";
 @import "_footer.scss";
 @import "_maintenance.scss";
+@import "passwordRecovery.scss";
 
 * {
   font-family: "Poppins", sans-serif;
