--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,7 @@
 @import "_finalCta.scss";
 @import "_footer.scss";
 @import "_maintenance.scss";
-
+@import "_register.scss";
 
 * {
   font-family: "Poppins", sans-serif;
