--- a/src/sass/_register.scss
+++ b/src/sass/_register.scss
@@ -1,5 +1,14 @@
 
-
-aside{
+.container-register{
+    position: absolute;
     background-color: $blue;
+    height: 100%;
+    width: 30%;
+}
+
+.child2{
+position: relative;
+left: 30%;
+width: 50%;
+
 }
