--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,8 @@
 @import "_footer.scss";
 @import "_maintenance.scss";
 @import "_register.scss";
+@import "_login.scss";
+@import "_aside.scss";
 
 * {
   font-family: "Poppins", sans-serif;
