--- a/src/sass/_login.scss
+++ b/src/sass/_login.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import "../styles\ variables/variables.scss";
 
 .login-title {
     position: absolute;
@@ -8,8 +9,138 @@
     font-size: 36px;
     width: 312px;
     height: 42px;
-    left: 707px;
-    top: 66px;
+    left: 807px;
+    top: 80px;
     line-height: 42px;
-    color: #000000;
+    color: $black;
+}
+
+.label-email {
+    position: absolute;
+    width: 170px;
+    height: 26px;
+    left: 806px;
+    top: 197px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    color: $darkGrey; 
+}
+
+.input-email {
+    position: absolute;
+    width: 546.5px;
+    left: 806.5px;
+    top: 235px;
+    outline: none;
+    border: 2px solid $grey5;
+}
+
+.input-password {
+    position: absolute;
+    width: 548px;
+    left: 806.5px;
+    top: 335px;
+    outline: none;
+    border: 2px solid $grey5;
+}
+
+.label-password {
+    position: absolute;
+    width: 170px;
+    height: 26px;
+    left: 806px;
+    top: 295px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    color: $darkGrey;
+}
+
+.btn {
+    position: absolute;
+    width: 548px;
+    height: 45px;
+    left: 807px;
+    top: 473px;
+    background: $blue;
+    border-radius: 8px;
+    color: $white;
+}
+
+.p-forgotten-password {
+    position: absolute;
+    width: 216px;
+    height: 36px;
+    left: 973px;
+    top: 569px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    text-decoration-line: underline;
+    color: $blue;
+}
+
+.p-register {
+    position: absolute;
+    width: 461px;
+    height: 30px;
+    left: 848px;
+    top: 624px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    color: $darkGrey;
+}
+
+.p-span {
+    position: absolute;
+    left: 1270px;
+    top: 624px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    color: $blue;
+    text-decoration-line: underline;
+}
+
+.checkbox {
+    box-sizing: border-box;
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    left: 807px;
+    top: 398px;
+    border: 1px solid $grey5;
+    border-radius: 2px;
+}
+
+.checkbox-span {
+    position: absolute;
+    width: 517px;
+    height: 36px;
+    left: 848px;
+    top: 398px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
+    color: $darkGrey;
 }
