login & register styled

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,7 @@
 @import "_register.scss";
 @import "_login.scss";
 @import "_aside.scss";
+@import "_wl-register.scss";
 
 * {
   font-family: "Poppins", sans-serif;
