--- a/src/sass/_login.scss
+++ b/src/sass/_login.scss
@@ -9,7 +9,7 @@
     font-size: 36px;
     width: 312px;
     height: 42px;
-    left: 807px;
+    left: 930px;
     top: 80px;
     line-height: 42px;
     color: $black;
@@ -19,8 +19,8 @@
     position: absolute;
     width: 170px;
     height: 26px;
-    left: 806px;
-    top: 197px;
+    left: 930px;
+    top: 297px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -32,28 +32,30 @@
 
 .input-email {
     position: absolute;
-    width: 546.5px;
-    left: 806.5px;
-    top: 235px;
+    width: 700px;
+    left: 930px;
+    top: 345px;
     outline: none;
-    border: 2px solid $grey5;
+    border: none;
+    border-bottom: 2px solid $grey5;
 }
 
 .input-password {
     position: absolute;
-    width: 548px;
-    left: 806.5px;
-    top: 335px;
+    width: 700px;
+    left: 930px;
+    top: 445px;
     outline: none;
-    border: 2px solid $grey5;
+    border: none;
+    border-bottom: 2px solid $grey5;
 }
 
 .label-password {
     position: absolute;
     width: 170px;
     height: 26px;
-    left: 806px;
-    top: 295px;
+    left: 930px;
+    top: 395px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -63,13 +65,14 @@
     color: $darkGrey;
 }
 
-.btn {
+.btn-login {
     position: absolute;
-    width: 548px;
+    width: 700px;
     height: 45px;
-    left: 807px;
-    top: 473px;
+    left: 930px;
+    top: 573px;
     background: $blue;
+    border: none;
     border-radius: 8px;
     color: $white;
 }
@@ -78,8 +81,8 @@
     position: absolute;
     width: 216px;
     height: 36px;
-    left: 973px;
-    top: 569px;
+    left: 1180px;
+    top: 769px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -90,12 +93,12 @@
     color: $blue;
 }
 
-.p-register {
+.p-login {
     position: absolute;
     width: 461px;
     height: 30px;
-    left: 848px;
-    top: 624px;
+    left: 1060px;
+    top: 825px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -105,10 +108,10 @@
     color: $darkGrey;
 }
 
-.p-span {
+.p-register-span {
     position: absolute;
-    left: 1270px;
-    top: 624px;
+    left: 1480px;
+    top: 825px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -124,8 +127,8 @@
     position: absolute;
     width: 25px;
     height: 25px;
-    left: 807px;
-    top: 398px;
+    left: 930px;
+    top: 498px;
     border: 1px solid $grey5;
     border-radius: 2px;
 }
@@ -134,8 +137,8 @@
     position: absolute;
     width: 517px;
     height: 36px;
-    left: 848px;
-    top: 398px;
+    left: 965px;
+    top: 495px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
