--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,7 +10,7 @@
 @import "_footer.scss";
 @import "_maintenance.scss";
 @import "_register.scss";
-@import "_employeeForm.scss";
+@import "_forms.scss";
 
 
 * {
