--- a/src/styles variables/variables.scss
+++ b/src/styles variables/variables.scss
@@ -12,6 +12,9 @@ $grey5: #4F4F4F;
 $background2: #eef1fa;
 $black: #000;
 
+//FONTS
+$roboto: 'Roboto', sans-serif;
+
 //MAPS 
 $breakpoints: (
     xs: 475px,
@@ -87,6 +90,8 @@ $breakpoints: (
         background: darken(#1243e3, 10);
             }
 }
+
+
     
 
 
