--- a/src/sass/_aside.scss
+++ b/src/sass/_aside.scss
@@ -10,7 +10,7 @@
     top: 0px;
 
     h1 {      
-        font-family: 'Roboto', sans-serif;
+        font-family: $roboto;
         font-style: normal;
         font-weight: 900;
         font-size: 55px;
@@ -24,7 +24,7 @@
     }
 
     h3 {
-        font-family: 'Roboto', sans-serif;
+        font-family: $roboto;
         font-style: normal;
         font-weight: 400;
         font-size: 28px;
