--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,11 +5,11 @@ footer.footer {
   background-color: $black;
   padding: 7vh 5%;
   min-height: 10vh;
-  .row {
+  /*.row {
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-evenly;*/
 
     // .col-12, .col-13, .col-14{
     //   display: flex;
@@ -17,79 +17,106 @@ footer.footer {
     // justify-content: space-evenly;
     // }
 
-    .col-12 {
-      width: 10%;
-      // align-items: center;
-      border: 1px solid blue;
-
-      .legend{
-        color: $grey1;
-        font-size: 1em;
-        font-weight: 200;
-        width: 22em;
-        padding-top: 1em;
-        padding-bottom: 1em;
-        border: 1px solid yellow;
-      }
-
-      .copyright {
-        color: $grey1;
-        font-size: 1em;
-        font-weight: 200;
-        border: 1px solid pink;
-      }
-
-      @include media-down(md) {
-        flex-flow: column;
-        justify-content: space-between;
-
-        .legend, .copyright {
-          margin-top: 5vh;
-          text-align: center;
-        }
-      }
-
-
-    }
-
-    .col-13{
-    height: 100%;
-    // align-items: center;
-    border: 1px solid red
-
-    }
-
-
-    .second-row{
-      font-size: 0.7em;
-      color: $white;
-      font-weight: 600;
-    }
-
-    .col-14{
-      flex-direction: row;
-    }
-
-    .fb-icon,  .t-icon, .li-icon, .yt-icon{
-      color: $black;
-      font-size: 2.1em;
-      background-color: $white;
-      border-radius: 100%;
-      border: none;
-    }
-
-    .i-icon{
-      color: $black;
-      font-size: 2.4em;
-      width: 1.5em;
-      height: 1em;
-      background-color: $white;
-      border-radius: 100%;
-      border: none;
-    }
-
-    .facebook-circle{
-      background-color: $black;
-    }
-  }
+.logo {
+  position: absolute;
+  width: 552px;
+  height: 60px;
+  left: 76px;
+  top: 6630px;
 }
+
+/*@include media-down(md) {
+  flex-flow: column;
+  justify-content: space-between;
+
+  .legend, .copyright {
+    margin-top: 5vh;
+    text-align: center;
+  }
+}*/
+
+.legend{
+  /*color: $grey1;
+  font-size: 1em;
+  font-weight: 200;
+  width: 22em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border: 1px solid yellow;*/
+  position: absolute;
+  width: 450px;
+  height: 61px;
+  left: 74px;
+  top: 6760px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: justify;
+  color: $white;
+}
+
+.copyright {
+  /*color: $grey1;
+  font-size: 1em;
+  font-weight: 200;
+  border: 1px solid pink;*/
+  position: absolute;
+  width: 250px;
+  height: 12px;
+  left: 75px;
+  top: 6840px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  text-align: justify;
+  color: $white;
+}
+
+.col-13 {
+  height: 100%;
+  align-items: center;
+  margin-left: 800px;
+}
+
+.second-row {
+  font-size: 0.7em;
+  color: $white;
+  font-weight: 600;
+  padding: 4px;
+}
+
+.col-14 {
+  flex-direction: row;
+  margin-left: 150px;
+  width: 500px;
+  border: 1px solid red;
+}
+
+.fb-icon,  .t-icon, .li-icon, .yt-icon {
+  color: $black;
+  font-size: 2.1em;
+  background-color: $white;
+  border-radius: 100%;
+  border: none;
+}
+
+.i-icon{
+  color: $black;
+  font-size: 2.4em;
+  width: 1.5em;
+  height: 1em;
+  background-color: $white;
+  border-radius: 100%;
+  border: none;
+}
+
+.facebook-circle{
+  background-color: $black;
+}
+
+}
+
