--- a/src/sass/_register.scss
+++ b/src/sass/_register.scss
@@ -2,8 +2,10 @@
 .container-register{
     position: absolute;
     background-color: $blue;
-    height: 100%;
+    height: 85.3vw;
     width: 30%;
+
+
 
     .logo-container{
         display: flex;
@@ -14,7 +16,7 @@
     .stepper-container{
         display: flex;
         justify-content: center;
-        margin-top: 10em;
+        margin-top: 15em;
     }
     
 }
@@ -22,6 +24,6 @@
 .step{
 position: relative;
 left: 30%;
-width: 50%;
+width: 60%;
 
 }
