--- a/src/styles variables/variables.scss
+++ b/src/styles variables/variables.scss
@@ -115,6 +115,7 @@ $breakpoints: (
     border-bottom: 2px solid $grey6;
     margin-right: 100px;
     background-color: transparent;
+    width: 67%;
 }
 
 @mixin input2() {
